--- a/api/external/api-resource-catalog-res.yaml
+++ b/api/external/api-resource-catalog-res.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/resource-catalogs:
     get:
+      x-product: OceanProtect X
       x-dm-role: 'Y'
       x-impact-subsystem: 不影响
       x-access-port: 25081
