--- a/api/internal/api-oracle-res-internal.yaml
+++ b/api/internal/api-oracle-res-internal.yaml
@@ -3,13 +3,20 @@ info:
   title: 资源管理（通用）
   version: v1
 tags:
-  - name: asminfo
-  - name: database-instance
   - name: databases
-  - name: register-databases
 paths:
-  '/v1/internal/agent/{host_ip}/databases':
+  /v1/internal/agent/{host_ip}/databases:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'Y'
+      x-impact-subsystem: 影响
+      x-access-port: 30092
+      x-auth-required: 'N'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'N'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -38,100 +45,18 @@ paths:
           description: Internal Server Error
       operationId: query_database_by_agent_v1_internal_agent__host_ip__databases_get
       summary: 查询代理主机注册的可用Oracle数据库信息列表【内部接口】
-  /v1/internal/asminfo:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 分页页面编码
-          in: query
-          minimum: 0
-          name: page_no
-          required: true
-          type: integer
-        - description: 分页数据条数
-          in: query
-          maximum: 200
-          minimum: 0
-          name: page_size
-          required: true
-          type: integer
-        - collectionFormat: multi
-          description: 排序字段：
-          in: query
-          items:
-            type: string
-          name: orders
-          required: false
-          type: array
-        - description: 条件参数：
-          in: query
-          name: conditions
-          required: false
-          type: string
-      responses:
-        '200':
-          description: Successful Response
-          schema:
-            $ref: '#/definitions/BasePage_AsmInfoSchema_'
-        '404':
-          description: Not Found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-      tags:
-        - asminfo
-      operationId: query_resources_v1_internal_asminfo_get
-      summary: 查询Oracle ASM列表
-  /v1/internal/database-instance:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 分页页面编码
-          in: query
-          minimum: 0
-          name: page_no
-          required: true
-          type: integer
-        - description: 分页数据条数
-          in: query
-          maximum: 200
-          minimum: 0
-          name: page_size
-          required: true
-          type: integer
-        - collectionFormat: multi
-          description: 排序字段：
-          in: query
-          items:
-            type: string
-          name: orders
-          required: false
-          type: array
-        - description: 条件参数：
-          in: query
-          name: conditions
-          required: false
-          type: string
-      responses:
-        '200':
-          description: Successful Response
-          schema:
-            $ref: '#/definitions/BasePage_DatabaseInstanceSchema_'
-        '404':
-          description: Not Found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-      tags:
-        - database-instance
-      operationId: query_resources_v1_internal_database_instance_get
-      summary: 查询GaussDB实例列表
   /v1/internal/databases:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'Y'
+      x-impact-subsystem: 影响
+      x-access-port: 30092
+      x-auth-required: 'N'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'N'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -156,8 +81,7 @@ paths:
           name: orders
           required: false
           type: array
-        - description: >-
-            条件参数：%inst_name%，%name%，!discriminator，!properties，path%，%authorized_user%
+        - description: 条件参数：%inst_name%，%name%，!discriminator，!properties，path%，%authorized_user%
           in: query
           name: conditions
           required: false
@@ -177,52 +101,6 @@ paths:
         - databases
       operationId: query_resources_v1_internal_databases_get
       summary: 查询Oracle数据库列表
-  /v1/internal/register-databases:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 分页页面编码
-          in: query
-          minimum: 0
-          name: page_no
-          required: true
-          type: integer
-        - description: 分页数据条数
-          in: query
-          maximum: 200
-          minimum: 0
-          name: page_size
-          required: true
-          type: integer
-        - collectionFormat: multi
-          description: 排序字段：
-          in: query
-          items:
-            type: string
-          name: orders
-          required: false
-          type: array
-        - description: 条件参数：
-          in: query
-          name: conditions
-          required: false
-          type: string
-      responses:
-        '200':
-          description: Successful Response
-          schema:
-            $ref: '#/definitions/BasePage_RegisterDatabaseSchema_'
-        '404':
-          description: Not Found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-      tags:
-        - register-databases
-      operationId: query_resources_v1_internal_register_databases_get
-      summary: 查询已注册的数据库列表
 definitions:
   AsmInfoSchema:
     properties:
@@ -366,7 +244,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[AsmInfoSchema]'
+    title: BasePage[AsmInfoSchema]
     type: object
   BasePage_DatabaseInstanceSchema_:
     properties:
@@ -398,7 +276,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[DatabaseInstanceSchema]'
+    title: BasePage[DatabaseInstanceSchema]
     type: object
   BasePage_DatabaseSchema_:
     properties:
@@ -430,7 +308,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[DatabaseSchema]'
+    title: BasePage[DatabaseSchema]
     type: object
   BasePage_EnvironmentResourceSchema_:
     properties:
@@ -462,7 +340,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[EnvironmentResourceSchema]'
+    title: BasePage[EnvironmentResourceSchema]
     type: object
   BasePage_EnvironmentSchema_:
     properties:
@@ -494,7 +372,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[EnvironmentSchema]'
+    title: BasePage[EnvironmentSchema]
     type: object
   BasePage_FilesetSchema_:
     properties:
@@ -526,7 +404,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[FilesetSchema]'
+    title: BasePage[FilesetSchema]
     type: object
   BasePage_HdfsSchema_:
     properties:
@@ -558,7 +436,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[HdfsSchema]'
+    title: BasePage[HdfsSchema]
     type: object
   BasePage_HyperVResourceSchema_:
     properties:
@@ -590,7 +468,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[HyperVResourceSchema]'
+    title: BasePage[HyperVResourceSchema]
     type: object
   BasePage_ImportResourceSchema_:
     properties:
@@ -622,7 +500,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[ImportResourceSchema]'
+    title: BasePage[ImportResourceSchema]
     type: object
   BasePage_KerberosAuthorizedResourceSchema_:
     properties:
@@ -654,7 +532,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[KerberosAuthorizedResourceSchema]'
+    title: BasePage[KerberosAuthorizedResourceSchema]
     type: object
   BasePage_KubernetesClusterSchema_:
     properties:
@@ -686,7 +564,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[KubernetesClusterSchema]'
+    title: BasePage[KubernetesClusterSchema]
     type: object
   BasePage_KubernetesDatasetSchema_:
     properties:
@@ -718,7 +596,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[KubernetesDatasetSchema]'
+    title: BasePage[KubernetesDatasetSchema]
     type: object
   BasePage_KubernetesResourceSchema_:
     properties:
@@ -750,7 +628,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[KubernetesResourceSchema]'
+    title: BasePage[KubernetesResourceSchema]
     type: object
   BasePage_RegisterDatabaseSchema_:
     properties:
@@ -782,7 +660,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[RegisterDatabaseSchema]'
+    title: BasePage[RegisterDatabaseSchema]
     type: object
   BasePage_VirtualResourceSchema_:
     properties:
@@ -814,7 +692,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[VirtualResourceSchema]'
+    title: BasePage[VirtualResourceSchema]
     type: object
   Database:
     properties:
@@ -2279,7 +2157,7 @@ definitions:
         type: boolean
       labels:
         default: []
-        description: '标签(只在Common类型数据集时可填，格式为[''App=Postgres'',''App=Others''])'
+        description: 标签(只在Common类型数据集时可填，格式为['App=Postgres','App=Others'])
         items: {}
         title: Labels
         type: array
@@ -2351,7 +2229,7 @@ definitions:
         type: string
       verify_status:
         default: 0
-        description: 'MySQL集群集群校验状态，0-未校验，1-校验中,2-校验通过，3-校验未通过'
+        description: MySQL集群集群校验状态，0-未校验，1-校验中,2-校验通过，3-校验未通过
         title: Verify Status
         type: integer
       version:
