--- a/api/external/api-oracle-res.yaml
+++ b/api/external/api-oracle-res.yaml
@@ -3,115 +3,13 @@ info:
   title: 资源管理接口（Oracle）
   version: v1
 tags:
-  - name: asminfo
-  - name: database-instance
   - name: databases
-  - name: db-instance
-  - name: register-databases
   - name: host
 paths:
-  /v1/asminfo:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 分页页面编码
-          in: query
-          minimum: 0
-          name: page_no
-          required: true
-          type: integer
-        - description: 分页数据条数
-          in: query
-          maximum: 200
-          minimum: 0
-          name: page_size
-          required: true
-          type: integer
-        - collectionFormat: multi
-          description: 排序字段：
-          in: query
-          items:
-            type: string
-          name: orders
-          required: false
-          type: array
-        - description: 条件参数：
-          in: query
-          name: conditions
-          required: false
-          type: string
-        - description: 访问令牌
-          in: header
-          name: X-Auth-Token
-          required: true
-      responses:
-        '200':
-          description: Successful Response
-          schema:
-            $ref: '#/definitions/BasePage_AsmInfoSchema_'
-        '404':
-          description: Not Found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-      tags:
-        - asminfo
-      operationId: query_resources_v1_asminfo_get
-      summary: 查询Oracle ASM列表
-  /v1/database-instance:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 分页页面编码
-          in: query
-          minimum: 0
-          name: page_no
-          required: true
-          type: integer
-        - description: 分页数据条数
-          in: query
-          maximum: 200
-          minimum: 0
-          name: page_size
-          required: true
-          type: integer
-        - collectionFormat: multi
-          description: 排序字段：
-          in: query
-          items:
-            type: string
-          name: orders
-          required: false
-          type: array
-        - description: 条件参数：
-          in: query
-          name: conditions
-          required: false
-          type: string
-        - description: 访问令牌
-          in: header
-          name: X-Auth-Token
-          required: true
-      responses:
-        '200':
-          description: Successful Response
-          schema:
-            $ref: '#/definitions/BasePage_DatabaseInstanceSchema_'
-        '404':
-          description: Not Found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-      tags:
-        - database-instance
-      operationId: query_resources_v1_database_instance_get
-      summary: 查询GaussDB实例列表
   /v1/databases:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'Y'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -144,8 +42,7 @@ paths:
           name: orders
           required: false
           type: array
-        - description: >-
-            条件参数：%inst_name%，%name%，!discriminator，!properties，path%，%authorized_user%
+        - description: 条件参数：%inst_name%，%name%，!discriminator，!properties，path%，%authorized_user%
           in: query
           name: conditions
           required: false
@@ -169,8 +66,10 @@ paths:
         - databases
       operationId: query_resources_v1_databases_get
       summary: 查询Oracle数据库列表
-  '/v1/databases/{db_id}/action/auth':
+  /v1/databases/{db_id}/action/auth:
     post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -217,8 +116,10 @@ paths:
         - databases
       operationId: auth_v1_databases__db_id__action_auth_post
       summary: 修改数据库认证信息
-  '/v1/databases/{db_id}/timestamps':
+  /v1/databases/{db_id}/timestamps:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -269,176 +170,20 @@ paths:
         - databases
       operationId: query_database_timestamp_v1_databases__db_id__timestamps_get
       summary: 查询数据库时间区间
-  /v1/db-instances/:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 主机ID
-          in: query
-          maxLength: 128
-          minLength: 1
-          name: host_id
-          required: false
-          type: string
-        - description: 数据库类型
-          in: query
-          maxLength: 128
-          minLength: 1
-          name: db_type
-          required: false
-          type: string
-        - description: 操作系统类型
-          in: query
-          maxLength: 128
-          minLength: 1
-          name: os_type
-          required: false
-          type: string
-        - description: 访问令牌
-          in: header
-          name: X-Auth-Token
-          required: true
-      responses:
-        '200':
-          description: The response is the list of all instance info
-          schema:
-            items:
-              $ref: '#/definitions/InstanceInfo'
-            title: Response Query Instance Infos V1 Db Instances  Get
-            type: array
-        '404':
-          description: Not found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-        '500':
-          description: Internal Server Error
-      tags:
-        - db-instance
-      operationId: query_instance_infos_v1_db_instances__get
-      summary: 查询数据库实例信息列表
+  /v1/db-instances/: {}
+  /v1/register-databases: {}
+  /v1/resource/host/{host_id}/action/sync-snmp-conf:
     post:
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - description: 访问令牌
-          in: header
-          name: X-Auth-Token
-          required: true
-        - in: body
-          name: body
-          required: true
-          schema:
-            allOf: null
-            $ref: '#/definitions/InstanceVerifyRequest'
-            description: 数据库实例认证信息
-            title: Instance Verify Request
-      responses:
-        '200':
-          description: The response is verify result
-          schema: {}
-        '404':
-          description: Not found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-        '500':
-          description: Internal Server Error
-      tags:
-        - db-instance
-      operationId: create_instance_verify_v1_db_instances__post
-      summary: 新增数据库实例认证信息
-    put:
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - description: 访问令牌
-          in: header
-          name: X-Auth-Token
-          required: true
-        - in: body
-          name: body
-          required: true
-          schema:
-            allOf: null
-            $ref: '#/definitions/InstanceVerifyRequest'
-            description: 数据库实例认证信息
-            title: Instance Verify Request
-      responses:
-        '200':
-          description: The response is verify result
-          schema: {}
-        '404':
-          description: Not found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-        '500':
-          description: Internal Server Error
-      tags:
-        - db-instance
-      operationId: instance_verify_v1_db_instances__put
-      summary: 修改数据库实例认证信息
-  /v1/register-databases:
-    get:
-      produces:
-        - application/json
-      parameters:
-        - description: 分页页面编码
-          in: query
-          minimum: 0
-          name: page_no
-          required: true
-          type: integer
-        - description: 分页数据条数
-          in: query
-          maximum: 200
-          minimum: 0
-          name: page_size
-          required: true
-          type: integer
-        - collectionFormat: multi
-          description: 排序字段：
-          in: query
-          items:
-            type: string
-          name: orders
-          required: false
-          type: array
-        - description: 条件参数：
-          in: query
-          name: conditions
-          required: false
-          type: string
-        - description: 访问令牌
-          in: header
-          name: X-Auth-Token
-          required: true
-      responses:
-        '200':
-          description: Successful Response
-          schema:
-            $ref: '#/definitions/BasePage_RegisterDatabaseSchema_'
-        '404':
-          description: Not Found
-        '422':
-          description: Validation Error
-          schema:
-            $ref: '#/definitions/HTTPValidationError'
-      tags:
-        - register-databases
-      operationId: query_resources_v1_register_databases_get
-      summary: 查询已注册的数据库列表
-  '/v1/resource/host/{host_id}/action/sync-snmp-conf':
-    post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -456,7 +201,6 @@ paths:
       responses:
         '200':
           description: The response is the newly created fileset
-          schema: {}
         '404':
           description: Not found
         '422':
@@ -467,11 +211,20 @@ paths:
           description: Internal Server Error
       tags:
         - host
-      operationId: >-
-        synchronize_snmp_to_host_v1_resource_host__host_id__action_sync_snmp_conf_post
+      operationId: synchronize_snmp_to_host_v1_resource_host__host_id__action_sync_snmp_conf_post
       summary: 同步Trap信息到Oracle主机
-  '/v1/resource/host/{host_id}/asm-auth':
+  /v1/resource/host/{host_id}/asm-auth:
     post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       consumes:
         - application/json
       produces:
@@ -490,14 +243,12 @@ paths:
           name: body
           required: true
           schema:
-            allOf: null
             $ref: '#/definitions/AsmAuthRequest'
             description: ASM授权信息
             title: Asm Auth Req
       responses:
         '200':
           description: The response is the newly created fileset
-          schema: {}
         '404':
           description: Not found
         '422':
@@ -510,8 +261,18 @@ paths:
         - host
       operationId: asm_auth_v1_resource_host__host_id__asm_auth_post
       summary: 修改ASM授权
-  '/v1/resource/host/{host_id}/asm-authinfo':
+  /v1/resource/host/{host_id}/asm-authinfo:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'Y'
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -539,8 +300,18 @@ paths:
         - host
       operationId: asm_auth_info_v1_resource_host__host_id__asm_authinfo_get
       summary: 根据主机ID查询主机ASM授权信息
-  '/v1/resource/host/{host_id}/asm-info':
+  /v1/resource/host/{host_id}/asm-info:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'Y'
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -942,7 +713,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[AsmInfoSchema]'
+    title: BasePage[AsmInfoSchema]
     type: object
   BasePage_DatabaseInstanceSchema_:
     properties:
@@ -974,7 +745,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[DatabaseInstanceSchema]'
+    title: BasePage[DatabaseInstanceSchema]
     type: object
   BasePage_DatabaseSchema_:
     properties:
@@ -1006,7 +777,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[DatabaseSchema]'
+    title: BasePage[DatabaseSchema]
     type: object
   BasePage_DbServerInfo_:
     properties:
@@ -1038,7 +809,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[DbServerInfo]'
+    title: BasePage[DbServerInfo]
     type: object
   BasePage_EnvironmentResourceSchema_:
     properties:
@@ -1070,7 +841,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[EnvironmentResourceSchema]'
+    title: BasePage[EnvironmentResourceSchema]
     type: object
   BasePage_EnvironmentSchema_:
     properties:
@@ -1102,7 +873,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[EnvironmentSchema]'
+    title: BasePage[EnvironmentSchema]
     type: object
   BasePage_FilesetSchema_:
     properties:
@@ -1134,7 +905,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[FilesetSchema]'
+    title: BasePage[FilesetSchema]
     type: object
   BasePage_HostDetail_:
     properties:
@@ -1166,7 +937,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[HostDetail]'
+    title: BasePage[HostDetail]
     type: object
   BasePage_HyperVResourceSchema_:
     properties:
@@ -1198,7 +969,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[HyperVResourceSchema]'
+    title: BasePage[HyperVResourceSchema]
     type: object
   BasePage_ProtectedObjectQueryResponse_:
     properties:
@@ -1230,7 +1001,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[ProtectedObjectQueryResponse]'
+    title: BasePage[ProtectedObjectQueryResponse]
     type: object
   BasePage_RegisterDatabaseSchema_:
     properties:
@@ -1263,7 +1034,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[RegisterDatabaseSchema]'
+    title: BasePage[RegisterDatabaseSchema]
     type: object
   BasePage_VirtualResourceSchema_:
     properties:
@@ -1295,7 +1066,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[VirtualResourceSchema]'
+    title: BasePage[VirtualResourceSchema]
     type: object
   BatchOperationReq:
     properties:
@@ -1416,7 +1187,7 @@ definitions:
   ComplianceUpdate:
     properties:
       compliance:
-        description: 'SLA遵从度, True：遵从，False：不遵从'
+        description: SLA遵从度, True：遵从，False：不遵从
         title: Compliance
         type: boolean
       resource_id:
@@ -1557,7 +1328,7 @@ definitions:
         description: 集群名称
         maxLength: 64
         minLength: 1
-        pattern: '^[a-zA-Z_\u4e00-\u9fa5]{1}[\u4e00-\u9fa5\w-]*$'
+        pattern: ^[a-zA-Z_\u4e00-\u9fa5]{1}[\u4e00-\u9fa5\w-]*$
         title: Cluster Name
         type: string
       nodes:
