--- a/api/internal/api-backup-client-res-internal.yaml
+++ b/api/internal/api-backup-client-res-internal.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/internal/agent/upgrade:
     get:
+      x-product: OceanProtect X
       produces:
         - application/json
       parameters:
@@ -56,6 +57,7 @@ paths:
       summary: 透传Agent执行客户端升级接口
   /v1/internal/agent/upgrade-status:
     get:
+      x-product: OceanProtect X
       produces:
         - application/json
       parameters:
