--- a/api/internal/api-common-res-internal.yaml
+++ b/api/internal/api-common-res-internal.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/internal/resource:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -53,6 +54,7 @@ paths:
       summary: 查询所有资源信息列表【内部接口】
   '/v1/internal/resource/action/revoke/{user_id}':
     put:
+      x-product: OceanProtect X
       produces:
         - application/json
       parameters:
@@ -77,6 +79,7 @@ paths:
       summary: 根据用户ID回收资源【内部接口】
   /v1/internal/resource/action/verify:
     get:
+      x-product: OceanProtect X
       produces:
         - application/json
       parameters:
@@ -109,6 +112,7 @@ paths:
       summary: 根据资源ID列表和用户ID校验资源所属用户是否正确【内部接口】
   '/v1/internal/resource/{resource_id}':
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -133,6 +137,7 @@ paths:
       summary: 根据资源ID查询资源信息【内部接口】
   /v1/internal/resource/anti-ransomware:
     get:
+      x-product: CyberEngine,OceanProtect X
       x-access-port: 25082
       x-auth-required: 'N'
       x-public-api: 'N'
