--- a/api/internal/api-copy-catalog-internal.yaml
+++ b/api/internal/api-copy-catalog-internal.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/internal/batchCopies:
     delete:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -33,6 +34,7 @@ paths:
       operationId: internal_delete_copy_list_v1_internal_batchCopies_delete
       summary: delete copies
     post:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -62,6 +64,7 @@ paths:
       summary: Save copies
   /v1/internal/copies:
     delete:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -88,6 +91,7 @@ paths:
       operationId: internal_delete_copy_info_v1_internal_copies_delete
       summary: Internal Delete Copy Info
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -134,6 +138,7 @@ paths:
       operationId: query_resources_v1_internal_copies_get
       summary: 查询copies信息列表
     post:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -163,6 +168,7 @@ paths:
       summary: Save copy
   /v1/internal/copies/action/activate-protection:
     put:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -193,6 +199,7 @@ paths:
       summary: Activated Copy Protection
   /v1/internal/copies/action/archive:
     post:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -222,6 +229,7 @@ paths:
       summary: Create Copy Archive Map
   /v1/internal/copies/action/create-protection:
     post:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -254,6 +262,7 @@ paths:
       summary: Create Copy Protection
   /v1/internal/copies/action/deactivate-protection:
     put:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -284,6 +293,7 @@ paths:
       summary: Deactivate Copy Protection
   /v1/internal/copies/action/delete-protection:
     delete:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -314,6 +324,7 @@ paths:
       summary: Delete Copy Protection
   /v1/internal/copies/action/revoke/{user_id}:
     put:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -338,6 +349,7 @@ paths:
       summary: Revoke Copy User Id
   /v1/internal/copies/action/verify:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -370,6 +382,7 @@ paths:
       summary: Internal Verify Copy Ownership
   /v1/internal/copies/archive/{storage_id}:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -397,6 +410,7 @@ paths:
       summary: get archive copy count by storage id
   /v1/internal/copies/no-archive:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -449,6 +463,7 @@ paths:
       summary: query no-archived copies
   /v1/internal/copies/resource:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -483,6 +498,7 @@ paths:
       summary: get copy info by resource_id
   /v1/internal/copies/resource-properties:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -524,6 +540,7 @@ paths:
       summary: get copy info by resource-properties
   /v1/internal/copies/summary/resources:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -571,6 +588,7 @@ paths:
       summary: 查询copies信息列表
   /v1/internal/copies/{chain_id}/signed-deleted-copies:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -606,6 +624,7 @@ paths:
       summary: get copies info by chain id
   /v1/internal/copies/{copy_id}:
     delete:
+      x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30092
@@ -668,6 +687,7 @@ paths:
       operationId: internal_delete_copy_v1_internal_copies__copy_id__delete
       summary: Internal Delete Copy
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -692,6 +712,7 @@ paths:
       summary: 根据副本ID查询副本信息
   /v1/internal/copies/{copy_id}/action/update-retention:
     post:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -725,6 +746,7 @@ paths:
       summary: Internal Update Copy Retention
   /v1/internal/copies/{copy_id}/index-status:
     put:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -758,6 +780,7 @@ paths:
       summary: Internal Update Copy Index Status
   /v1/internal/copies/{copy_id}/latest-related-copy:
     get:
+      x-product: CyberEngine,OceanProtect X
       produces:
         - application/json
       parameters:
@@ -797,6 +820,7 @@ paths:
       summary: get copy info by condition
   /v1/internal/copies/{copy_id}/status:
     put:
+      x-product: CyberEngine,OceanProtect X
       consumes:
         - application/json
       produces:
@@ -831,6 +855,7 @@ paths:
       summary: Internal Update Copy Status
   /v1/internal/copies/{copy_id}/detail:
     put:
+      x-product: CyberEngine,OceanProtect X
       tags:
         - copies
       summary: 更新副本详情detail字段
@@ -869,6 +894,7 @@ paths:
             type: string
   /v1/internal/copies/index-status:
     put:
+      x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 影响
       x-access-port: 25081
       x-auth-required: 'N'
@@ -905,6 +931,7 @@ paths:
             type: string
   /v1/internal/copies/{copy_id}/properties:
     put:
+      x-product: CyberEngine,OceanProtect X
       tags:
         - copies
       x-dm-role: 'N'
@@ -944,6 +971,7 @@ paths:
             type: string
   /v1/internal/copies/{copy_id}/worm-status:
     put:
+      x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30092
@@ -993,6 +1021,7 @@ paths:
       summary: Internal Update Copy Worm Status
   /v1/internal/replicated-copies:
     post:
+      x-product: CyberEngine,OceanProtect X
       tags:
         - copies
       description: 创建复制副本和esn关联关系
@@ -1019,6 +1048,7 @@ paths:
           schema:
             type: string
     get:
+      x-product: CyberEngine,OceanProtect X
       tags:
         - copies
       x-dm-role: 'N'
