--- a/api/internal/api-restore-wf-internal.yaml
+++ b/api/internal/api-restore-wf-internal.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/internal/restore/action/abort:
     put:
+      x-product: OceanProtect X
       consumes:
         - application/json
       produces:
